--- a/styles/db-theme/pages/_page--merch-store.scss
+++ b/styles/db-theme/pages/_page--merch-store.scss
@@ -1099,7 +1099,7 @@
                   display: block;
                   width: 100%;
                   height: 370px;
-                  margin: 0 auto 24px;
+                  margin: 0 auto 16px;
 
                   @media only screen and (max-width: 1440px) {
                     height: 270px;
@@ -1107,7 +1107,6 @@
 
                   @media only screen and (max-width: 768px) {
                     height: auto;
-                    margin: 0 auto 7px;
                   }
 
                   .product-img {
@@ -1119,173 +1118,193 @@
                   }
                 }
 
-                .product-details {
-                  position: relative;
-                  z-index: 1;
-                  visibility: visible;
-                  opacity: 1;
-                  height: 60px;
-                  transition:
-                    opacity $hover-transition-duration ease-in-out 0ms;
+                .product-color-list {
+                  display: flex;
+                  justify-content: flex-start;
+                  align-items: stretch;
+                  gap: 4px;
+                  margin-bottom: 20px;
 
-                  @media only screen and (max-width: 768px) {
-                    height: auto;
-                    margin: 0 auto 16px;
-                  }
-
-                  .product-title {
-                    color: $white-color;
-                    font-family: $primary-font-family;
-                    font-size: 20px;
-                    font-style: normal;
-                    font-weight: 500;
-                    line-height: 1.25em;
-                    margin-bottom: 8px;
-
-                    @media only screen and (max-width: 768px) {
-                      font-size: 14px;
-                      margin-bottom: 5px;
-                    }
-                  }
-
-                  .product-price {
-                    display: flex;
-                    justify-content: flex-start;
-                    align-items: flex-end;
-                    gap: 8px;
-
-                    .current-price {
-                      color: #D86FFF;
-                      font-family: $primary-font-family;
-                      font-size: 28px;
-                      font-style: normal;
-                      font-weight: 500;
-                      font-feature-settings: 'calt' off;
-                      line-height: 1em;
-                      letter-spacing: -0.28px;
-                      white-space: nowrap;
-
-                      @media only screen and (max-width: 768px) {
-                        font-size: 15px;
-                      }
-                    }
-
-                    .before-price {
-                      color: #787878;
-                      font-family: $primary-font-family;
-                      font-size: 16px;
-                      font-style: normal;
-                      font-weight: 300;
-                      font-feature-settings: 'calt' off;
-                      text-decoration: line-through;
-                      line-height: 1em;
-                      letter-spacing: -0.16px;
-                      width: nowrap;
-
-                      @media only screen and (max-width: 768px) {
-                        font-size: 12px;
-                      }
-                    }
+                  .product-color-option {
+                    background-color: $white-color;
+                    width: 19px;
+                    height: 17px;
+                    border-radius: 3px;
+                    cursor: pointer;
                   }
                 }
 
-                .product-actions {
-                  position: absolute;
-                  z-index: 2;
-                  bottom: 0;
-                  display: flex;
-                  justify-content: center;
-                  align-items: center;
-                  gap: 16px;
-                  visibility: hidden;
-                  opacity: 0;
-                  width: 100%;
-                  height: 60px;
-                  transition:
-                    opacity $hover-transition-duration ease-in-out 0ms;
-                  
-                  @media only screen and (max-width: 768px) {
+                .hover-group {
+                  position: relative;
+
+                  .product-details {
                     position: relative;
-                    bottom: unset;
-                    gap: 10px;
+                    z-index: 1;
                     visibility: visible;
                     opacity: 1;
-                    height: auto;
+                    height: 60px;
+                    transition:
+                      opacity $hover-transition-duration ease-in-out 0ms;
+
+                    @media only screen and (max-width: 768px) {
+                      height: auto;
+                      margin: 0 auto 16px;
+                    }
+
+                    .product-title {
+                      color: $white-color;
+                      font-family: $primary-font-family;
+                      font-size: 20px;
+                      font-style: normal;
+                      font-weight: 500;
+                      line-height: 1.25em;
+                      margin-bottom: 8px;
+
+                      @media only screen and (max-width: 768px) {
+                        font-size: 14px;
+                        margin-bottom: 5px;
+                      }
+                    }
+
+                    .product-price {
+                      display: flex;
+                      justify-content: flex-start;
+                      align-items: flex-end;
+                      gap: 8px;
+
+                      .current-price {
+                        color: #D86FFF;
+                        font-family: $primary-font-family;
+                        font-size: 28px;
+                        font-style: normal;
+                        font-weight: 500;
+                        font-feature-settings: 'calt' off;
+                        line-height: 1em;
+                        letter-spacing: -0.28px;
+                        white-space: nowrap;
+
+                        @media only screen and (max-width: 768px) {
+                          font-size: 15px;
+                        }
+                      }
+
+                      .before-price {
+                        color: #787878;
+                        font-family: $primary-font-family;
+                        font-size: 16px;
+                        font-style: normal;
+                        font-weight: 300;
+                        font-feature-settings: 'calt' off;
+                        text-decoration: line-through;
+                        line-height: 1em;
+                        letter-spacing: -0.16px;
+                        width: nowrap;
+
+                        @media only screen and (max-width: 768px) {
+                          font-size: 12px;
+                        }
+                      }
+                    }
                   }
 
-                  .db-btn--buy-it-now {
+                  .product-actions {
+                    position: absolute;
+                    z-index: 2;
+                    bottom: 0;
                     display: flex;
                     justify-content: center;
                     align-items: center;
-                    background-color: $secondary-color;
-                    opacity: 1;
-                    max-width: 235px;
+                    gap: 16px;
+                    visibility: hidden;
+                    opacity: 0;
                     width: 100%;
-                    padding: 17px 22px;
-                    border-radius: 50px;
-                    border: 1px solid $secondary-color;
+                    height: 60px;
                     transition:
-                      all $hover-transition-duration ease-in-out 0ms;
-
+                      opacity $hover-transition-duration ease-in-out 0ms;
+                    
                     @media only screen and (max-width: 768px) {
-                      max-width: 100%;
-                      padding: 10px 12px;
+                      position: relative;
+                      bottom: unset;
+                      gap: 10px;
+                      visibility: visible;
+                      opacity: 1;
+                      height: auto;
                     }
 
-                    .label {
-                      color: $white-color;
-                      font-family: $primary-font-family;
-                      font-size: 18px;
-                      font-style: normal;
-                      font-weight: 700;
-                      line-height: 1em;
-                      white-space: nowrap;
-                      display: block;
+                    .db-btn--buy-it-now {
+                      display: flex;
+                      justify-content: center;
+                      align-items: center;
+                      background-color: $secondary-color;
+                      opacity: 1;
+                      max-width: 235px;
+                      width: 100%;
+                      padding: 17px 22px;
+                      border-radius: 50px;
+                      border: 1px solid $secondary-color;
                       transition:
                         all $hover-transition-duration ease-in-out 0ms;
 
                       @media only screen and (max-width: 768px) {
-                        font-size: 14px;
-                        font-weight: 500;
+                        max-width: 100%;
+                        padding: 10px 12px;
+                      }
+
+                      .label {
+                        color: $white-color;
+                        font-family: $primary-font-family;
+                        font-size: 18px;
+                        font-style: normal;
+                        font-weight: 700;
+                        line-height: 1em;
+                        white-space: nowrap;
+                        display: block;
+                        transition:
+                          all $hover-transition-duration ease-in-out 0ms;
+
+                        @media only screen and (max-width: 768px) {
+                          font-size: 14px;
+                          font-weight: 500;
+                        }
+                      }
+
+                      &:hover {
+                        opacity: 0.7;
                       }
                     }
 
-                    &:hover {
-                      opacity: 0.7;
-                    }
-                  }
-
-                  .db-btn--add-to-cart {
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    background-color: transparent;
-                    max-width: 56px;
-                    min-width: 56px;
-                    width: 100%;
-                    height: 56px;
-                    border: 1px solid $primary-color;
-                    border-radius: 50px;
-
-                    @media only screen and (max-width: 768px) {
-                      max-width: 36px;
-                      min-width: 36px;
-                      height: 36px;
-                    }
-
-                    .svg-icon-cart {
-                      max-width: 20px;
-                      min-width: 20px;
+                    .db-btn--add-to-cart {
+                      display: flex;
+                      justify-content: center;
+                      align-items: center;
+                      background-color: transparent;
+                      max-width: 56px;
+                      min-width: 56px;
                       width: 100%;
+                      height: 56px;
+                      border: 1px solid $primary-color;
+                      border-radius: 50px;
 
                       @media only screen and (max-width: 768px) {
-                        max-width: 14px;
-                        min-width: 14px;
+                        max-width: 36px;
+                        min-width: 36px;
+                        height: 36px;
                       }
-                    }
 
-                    &:hover {
-                      background-color: $primary-color;
+                      .svg-icon-cart {
+                        max-width: 20px;
+                        min-width: 20px;
+                        width: 100%;
+
+                        @media only screen and (max-width: 768px) {
+                          max-width: 14px;
+                          min-width: 14px;
+                        }
+                      }
+
+                      &:hover {
+                        background-color: $primary-color;
+                      }
                     }
                   }
                 }
@@ -1297,19 +1316,21 @@
                 }
 
                 &:hover {
-                  .product-details {
-                    visibility: hidden;
-                    opacity: 0;
+                  .hover-group {
+                    .product-details {
+                      visibility: hidden;
+                      opacity: 0;
 
-                    @media only screen and (max-width: 768px) {
+                      @media only screen and (max-width: 768px) {
+                        visibility: visible;
+                        opacity: 1;
+                      }
+                    }
+
+                    .product-actions {
                       visibility: visible;
                       opacity: 1;
                     }
-                  }
-
-                  .product-actions {
-                    visibility: visible;
-                    opacity: 1;
                   }
                 }
               }
