--- a/styles/db-theme/components/_cart.scss
+++ b/styles/db-theme/components/_cart.scss
@@ -26,25 +26,25 @@
   }
 
   .db-cart-wrap {
-    position: absolute;
-    z-index: 2;
-    right: -585px;
     --headHeight: 70px;
     --footHeight: 395px;
+    --cartWidth: 585px;
+    position: absolute;
+    z-index: 2;
+    right: calc(var(--cartWidth) * -1);
     display: block;
     background-color: #0C0814;
-    max-width: 585px;
-    min-width: 585px;
+    max-width: var(--cartWidth);
+    min-width: var(--cartWidth);
     width: 100%;
     height: 100%;
-    overflow: hidden auto;
     transition:
       right $click-transition-duration ease-in-out 0ms;
     
     @media only screen and (max-width: 768px) {
       --headHeight: 45px;
       --footHeight: 250px;
-      right: -100%;
+      --cartWidth: 100%;
       max-width: 100%;
       min-width: unset;
     }
@@ -118,13 +118,13 @@
       position: relative;
       z-index: 1;
       background-color: #0C0814;
-      height: auto;
+      height: calc(100vh - (var(--headHeight) + var(--footHeight)));
+      overflow: hidden auto;
 
       .product-list {
         position: relative;
         z-index: 2;
         max-height: 100%;
-        min-height: calc(100vh - (var(--headHeight) + var(--footHeight)));
         height: 100%;
 
         .product-item {
@@ -335,6 +335,10 @@
             height: 100%;
             overflow: hidden;
 
+            @media only screen and (max-width: 768px) {
+              width: 40px;
+            }
+
             .svg-icon-bin {
               opacity: 0;
               max-width: 16px;
@@ -342,6 +346,10 @@
               width: 100%;
               transition:
                 opacity $hover-transition-duration ease-in-out 0ms;
+
+              @media only screen and (max-width: 768px) {
+                opacity: 1;
+              }
             }
           }
 
@@ -385,40 +393,6 @@
         @media only screen and (max-width: 768px) {
           font-size: 14px;
         }
-      }
-
-      .cart-loader {
-        position: absolute;
-        z-index: 3;
-        inset: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-color: rgba(0, 0, 0, 0.5);
-        width: 100%;
-        height: 100%;
-
-        .loader {
-          width: 50px;
-          padding: 8px;
-          aspect-ratio: 1;
-          border-radius: 50%;
-          background: $primary-color;
-          --_m: 
-            conic-gradient(#0000 10%,#000),
-            linear-gradient(#000 0 0) content-box;
-          -webkit-mask: var(--_m);
-          mask: var(--_m);
-          -webkit-mask-composite: source-out;
-          mask-composite: subtract;
-          animation: cart-loader 1s infinite linear;
-        }
-
-        @keyframes cart-loader {
-          to {
-            transform: rotate(1turn)
-          }
-        };
       }
     }
 
@@ -552,6 +526,45 @@
           }
         }
       }
+    }
+
+    .cart-loader {
+      position: fixed;
+      z-index: 3;
+      top: var(--headHeight);
+      right: 0;
+      bottom: 0;
+      left: unset;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: rgba(0, 0, 0, 0.5);
+      max-width: var(--cartWidth);
+      min-width: var(--cartWidth);
+      width: 100%;
+      height: calc(100vh - (var(--headHeight) + var(--footHeight)));
+
+      .loader {
+        width: 50px;
+        padding: 8px;
+        aspect-ratio: 1;
+        border-radius: 50%;
+        background: $primary-color;
+        --_m: 
+          conic-gradient(#0000 10%,#000),
+          linear-gradient(#000 0 0) content-box;
+        -webkit-mask: var(--_m);
+        mask: var(--_m);
+        -webkit-mask-composite: source-out;
+        mask-composite: subtract;
+        animation: cart-loader 1s infinite linear;
+      }
+
+      @keyframes cart-loader {
+        to {
+          transform: rotate(1turn)
+        }
+      };
     }
   }
 }
