--- a/styles/db-theme/pages/_page--merch-store.scss
+++ b/styles/db-theme/pages/_page--merch-store.scss
@@ -67,7 +67,7 @@
 
           .search-bar {
             position: relative;
-            z-index: 99999;
+            z-index: 1;
             max-width: 495px;
             min-width: 495px;
             width: 100%;
@@ -169,7 +169,7 @@
 
           .search-results {
             position: absolute;
-            z-index: 99999;
+            z-index: 1;
             top: 80px;
             left: 50%;
             translate: -50% 0;
@@ -412,7 +412,12 @@
       .db-container {
         .db-row {
           .search-wrap {
+            .search-bar {
+              z-index: 99999;
+            }
+
             .search-results {
+              z-index: 99999;
               visibility: visible;
               opacity: 1;
               max-width: 100%;
@@ -482,6 +487,7 @@
               display: block;
               background-color: #2D2134;
               max-width: 100%;
+              min-width: unset;
               width: 100%;
               overflow: auto;
               padding: 50px 30px;
@@ -499,6 +505,10 @@
 
               @media only screen and (max-width: 1080px) {
                 padding-bottom: 20px;
+              }
+
+              @media only screen and (max-width: 480px) {
+                min-width: 320px;
               }
 
               h3 {
@@ -557,6 +567,10 @@
             }
 
             .product-filter {
+              @media only screen and (max-width: 480px) {
+                min-width: 320px;
+              }
+
               &.--by-clothing,
               &.--by-accessories {
                 padding: 30px 17px 25px;
@@ -720,6 +734,11 @@
                 display: block;
               }
 
+              @media only screen and (max-width: 480px) {
+                max-width: 100%;
+                min-width: 320px;
+              }
+
               .label {
                 color: $white-color;
                 font-family: $primary-font-family;
@@ -749,7 +768,7 @@
             }
 
             .db-inner-row {
-              justify-content: space-between;
+              justify-content: flex-end;
               align-items: center;
               gap: 16px;
               width: 100%;
@@ -1094,52 +1113,65 @@
                 transition:
                   opacity 0ms ease-in-out 0ms;
                 cursor: pointer;
-                
-                .product-img-link {
-                  display: block;
-                  width: 100%;
-                  height: 370px;
+
+                .product-top-wrap {
+                  position: relative;
+                  overflow: hidden;
                   margin: 0 auto 16px;
-
-                  @media only screen and (max-width: 1440px) {
-                    height: 270px;
-                  }
-
-                  @media only screen and (max-width: 768px) {
-                    height: auto;
-                  }
-
-                  .product-img {
+                  
+                  .product-img-link {
+                    position: relative;
+                    z-index: 1;
                     display: block;
                     width: 100%;
-                    height: 100%;
-                    object-fit: cover;
-                    object-position: center;
+
+                    .product-img {
+                      display: block;
+                      width: 100%;
+                      height: auto;
+                      object-fit: cover;
+                      object-position: center;
+                    }
+                  }
+
+                  .product-color-list {
+                    position: absolute;
+                    z-index: 2;
+                    top: 15px;
+                    left: 15px;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: flex-start;
+                    align-items: stretch;
+                    gap: 4px;
+
+                    @media only screen and (max-width: 768px) {
+                      top: 10px;
+                      left: 10px;
+                    }
+
+                    .product-color-option {
+                      width: 25px;
+                      height: 25px;
+                      border: 2px solid #E0E0E0;
+                      border-radius: 3px;
+                      cursor: pointer;
+
+                      @media only screen and (max-width: 768px) {
+                        width: 20px;
+                        height: 20px;
+                      }
+                    }
                   }
                 }
 
-                .product-color-list {
-                  display: flex;
-                  justify-content: flex-start;
-                  align-items: stretch;
-                  gap: 4px;
-                  margin-bottom: 20px;
-
-                  .product-color-option {
-                    background-color: $white-color;
-                    width: 19px;
-                    height: 17px;
-                    border-radius: 3px;
-                    cursor: pointer;
-                  }
-                }
-
-                .hover-group {
+                .product-bot-wrap {
                   position: relative;
 
                   .product-details {
                     position: relative;
                     z-index: 1;
+                    top: 0;
                     visibility: visible;
                     opacity: 1;
                     height: 60px;
@@ -1210,7 +1242,7 @@
                   .product-actions {
                     position: absolute;
                     z-index: 2;
-                    bottom: 0;
+                    top: 0;
                     display: flex;
                     justify-content: center;
                     align-items: center;
@@ -1316,7 +1348,7 @@
                 }
 
                 &:hover {
-                  .hover-group {
+                  .product-bot-wrap {
                     .product-details {
                       visibility: hidden;
                       opacity: 0;
