--- a/styles/db-theme/pages/_page--product.scss
+++ b/styles/db-theme/pages/_page--product.scss
@@ -649,53 +649,63 @@
         }
 
         .product-item {
-          position: relative;
           opacity: 0;
           transition:
             opacity 0ms ease-in-out 0ms;
           cursor: pointer;
           
-          .product-img-link {
-            display: block;
-            width: 100%;
-            height: 370px;
+          .product-top-wrap {
+            position: relative;
             margin: 0 auto 16px;
 
-            @media only screen and (max-width: 1440px) {
-              height: 270px;
-            }
-
-            @media only screen and (max-width: 480px) {
-              height: 160px;
-              margin: 0 auto 7px;
-            }
-
-            .product-img {
+            .product-img-link {
+              position: relative;
+              z-index: 1;
               display: block;
               width: 100%;
-              height: 100%;
-              object-fit: cover;
-              object-position: center;
+              height: auto;
+
+              .product-img {
+                display: block;
+                width: 100%;
+                height: auto;
+                object-fit: cover;
+                object-position: center;
+              }
+            }
+
+            .product-color-list {
+              position: absolute;
+              z-index: 2;
+              top: 15px;
+              left: 15px;
+              display: flex;
+              flex-direction: column;
+              justify-content: flex-start;
+              align-items: stretch;
+              gap: 4px;
+
+              @media only screen and (max-width: 768px) {
+                top: 10px;
+                left: 10px;
+              }
+
+              .product-color-option {
+                width: 25px;
+                height: 25px;
+                border: 2px solid #E0E0E0;
+                border-radius: 3px;
+                cursor: pointer;
+
+                @media only screen and (max-width: 768px) {
+                  width: 20px;
+                  height: 20px;
+                }
+              }
             }
           }
 
-          .product-color-list {
-            display: flex;
-            justify-content: flex-start;
-            align-items: stretch;
-            gap: 4px;
-            margin-bottom: 20px;
-
-            .product-color-option {
-              background-color: $white-color;
-              width: 19px;
-              height: 17px;
-              border-radius: 3px;
-              cursor: pointer;
-            }
-          }
-
-          .hover-group {
+          .product-bot-wrap {
             position: relative;
 
             .product-details {
@@ -890,7 +900,7 @@
           }
 
           &:hover {
-            .hover-group {
+            .product-bot-wrap {
               .product-details {
                 visibility: hidden;
                 opacity: 0;
